# WalletMonitor

./: .gitignore  README.md  pyproject.toml  start.sh
wallet-monitor/: README.md  index.html  package-lock.json  package.json  requirements-minimal.txt  requirements.txt  run_as_plugin.sh  run_backend.sh  run_frontend.sh
wallet-monitor/api/: wallets.py
wallet-monitor/backend/: app.py  main.py  wallet_monitor.db
wallet-monitor/backend/alert/: engine.py
wallet-monitor/backend/api/: alerts.py  transactions.py
wallet-monitor/backend/blockchain/: base.py  ethereum.py  factory.py  solana.py
wallet-monitor/backend/data/: analyzer.py  processor.py  storage.py
wallet-monitor/backend/plugins/: plugin_base.py  plugin_manager.py
wallet-monitor/backend/plugins/wallet-monitor/: manifest.json  plugin.py
wallet-monitor/backend/plugins/wallet_monitor/: __init__.py  manifest.json  plugin.py
wallet-monitor/backend/plugins/wallet_monitor/alert/: engine.py
wallet-monitor/backend/plugins/wallet_monitor/api/: transactions.py  wallets.py
wallet-monitor/backend/plugins/wallet_monitor/blockchain/: bsc.py  ethereum.py
wallet-monitor/backend/plugins/wallet_monitor/data/: processor.py  storage.py
wallet-monitor/frontend/src/plugins/wallet-monitor/: index.tsx  manifest.json
wallet-monitor/frontend/src/plugins/wallet-monitor/components/: AlertManagement.tsx  ContractMonitor.tsx  TransactionMonitor.tsx  (+1 more)
wallet-monitor/src/: App.tsx  index.css
wallet-monitor/src/components/: AlertManagement.tsx  Dashboard.tsx  TransactionMonitor.tsx  WalletManagement.tsx
(+2 files in other folders)
